--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>ua.anakin</groupId>
     <artifactId>HibernateStudy01</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
 
     <properties>
         <org.hibernate.version>4.3.10.Final</org.hibernate.version>
@@ -67,5 +66,17 @@
         </dependency>
     </dependencies>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
